tests/integration/pilot/test_artifacts/pilot-b69b4fcf9fb24a978e2d0f26c/TestTraffic/instanceip/instance_IP_with_wildcard_sidecar/_test_context/Sidecar.2653363088.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: sidecar
  namespace: echo-2-20468
spec:
  egress:
  - hosts:
    - ./*
  ingress:
  - defaultEndpoint: 0.0.0.0:18082
    port:
      number: 18082
      protocol: HTTP
  workloadSelector:
    labels:
      app: b
